--- a/src/client/pages/common.css
+++ b/src/client/pages/common.css
@@ -28,7 +28,6 @@ h3,
 h4,
 h5,
 h6,
-p,
 blockquote,
 pre,
 a,
@@ -98,6 +97,10 @@ input {
 	padding: 0;
 	border: 0;
 	vertical-align: baseline;
+}
+
+p {
+	margin: 0 0 12px 0;
 }
 
 article,
