--- a/src/client/layout/footer.css
+++ b/src/client/layout/footer.css
@@ -1,4 +1,5 @@
 .footer {
+  margin-top: 50px;
   padding: 40px 10px 40px;
   background: #28313a;
   color: #ccc;
@@ -13,4 +14,15 @@
 .navLink {
   display: block;
   margin-bottom: 10px;
+}
+
+.left {
+  margin-right: 40%;
+}
+
+.contacts {
+  margin-top: 25px;
+  border: 1px solid #666;
+  border-width: 1px 0 0 0;
+  padding-top: 25px;
 }
