--- a/src/client/pages/common.css
+++ b/src/client/pages/common.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat+Alternates');
+@import url('https://fonts.googleapis.com/css?family=Forum|Montserrat+Alternates:400,700&subset=cyrillic');
 
 body {
 	color: #33363b;
