--- a/src/client/pages/conference/styles.css
+++ b/src/client/pages/conference/styles.css
@@ -1,9 +1,25 @@
 @import url('../common.css');
 
+.section {
+  overflow: hidden;
+}
+
 .email {
   display: block;
   padding: 10px;
   background-color: #fff1a4;
   float: left;
+  margin: 30px 30px 30px 0;
+}
+
+.media {
+  display: block;
+  float: left;
+  margin: 30px 30px 30px 0;
+}
+
+.list {
+  display: block;
+  float: right;
   margin: 30px 30px 30px 0;
 }
