--- a/src/client/pages/common.css
+++ b/src/client/pages/common.css
@@ -172,3 +172,10 @@ a {
 a:hover {
 	color: #ff4629;
 }
+
+:global(.clearfix::after) {
+	content: '';
+  display: block;
+  height: 0;
+  clear: both;
+}
