--- a/src/client/layout/footer.css
+++ b/src/client/layout/footer.css
@@ -26,3 +26,22 @@
   border-width: 1px 0 0 0;
   padding-top: 25px;
 }
+
+.social {
+  margin-top: 25px;
+  border: 1px solid #666;
+  border-width: 1px 0 0 0;
+  padding-top: 25px;
+}
+
+.socialButton {
+  cursor: pointer;
+}
+
+.socialButton:hover {
+  color: #fff1a4;
+}
+
+:global(.SocialMediaShareButton) {
+  display: inline;
+}
