--- a/src/client/pages/consulting/styles.css
+++ b/src/client/pages/consulting/styles.css
@@ -1,10 +1,15 @@
 @import url('../common.css');
 
-.left {
-  float: left;
-  margin-top: 75px;
+.section {
+  margin-bottom: 30px;
 }
 
-.right {
-  margin-left: 590px;
+.feedback {
+  display: flex;
+  justify-content: space-around;
+  align-content: flex-start;
+}
+
+.feedbackItem {
+  padding: 0 20px;
 }
