--- a/src/client/pages/book/styles.css
+++ b/src/client/pages/book/styles.css
@@ -6,6 +6,12 @@
   font-family: 'Forum', serif;
 }
 
+@media (max-width: 400px) {
+  .foreword {
+    width: 70%;
+  }
+}
+
 .forewordAuthor {
   text-align: right;
 }
