--- a/src/client/components/section.css
+++ b/src/client/components/section.css
@@ -3,6 +3,13 @@
   margin-right: 20px;
 }
 
+@media (max-width: 400px) {
+  .section {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
 .sectionHeader {
   font-size: 24px;
   text-align: center;
