--- a/src/client/layout/footer.css
+++ b/src/client/layout/footer.css
@@ -6,9 +6,23 @@
   overflow: hidden;
 }
 
+@media (max-width: 400px) {
+  .footer {
+    margin-left: -10px;
+    margin-right: -10px;
+  }
+}
+
 .nav {
   float: right;
   width: 30%;
+}
+
+@media (max-width: 400px) {
+  .nav {
+    float: none;
+    width: auto;
+  }
 }
 
 .navLink {
@@ -18,6 +32,12 @@
 
 .left {
   margin-right: 40%;
+}
+
+@media (max-width: 400px) {
+  .left {
+    margin-right: 0;
+  }
 }
 
 .contacts {
