--- a/src/client/pages/articles/styles.css
+++ b/src/client/pages/articles/styles.css
@@ -12,6 +12,12 @@
   margin-right: auto;
 }
 
+@media (max-width: 400px) {
+  .q {
+    width: auto;
+  }
+}
+
 .article {
   margin-bottom: 60px;
 }
@@ -19,4 +25,16 @@
 .pic {
   float: right;
   margin: 30px 0 30px 30px;
+}
+
+@media (max-width: 400px) {
+  .pic {
+    float: none;
+    margin-right: -10px;
+    margin-left: -10px;
+  }
+
+  .pic img {
+    width: 100%;
+  }
 }
