--- a/src/client/pages/consulting/styles.css
+++ b/src/client/pages/consulting/styles.css
@@ -10,6 +10,19 @@
   align-content: flex-start;
 }
 
+@media (max-width: 400px) {
+  .feedback {
+    flex-direction: column;
+  }
+}
+
 .feedbackItem {
   padding: 0 20px;
+}
+
+@media (max-width: 400px) {
+  .feedbackItem {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
