--- a/src/client/pages/school/styles.css
+++ b/src/client/pages/school/styles.css
@@ -1,7 +1,22 @@
 @import url('../common.css');
 
 .intro {
-  text-align: center;
+  width: 560px;
+  margin: 0 auto 20px;
+}
+
+@media (max-width: 400px) {
+  .intro {
+    width: 100%;
+  }
+}
+
+.optionsTableWrapper{}
+
+@media (max-width: 400px) {
+  .optionsTableWrapper {
+    overflow-x: scroll;
+  }
 }
 
 .optionsTable {
