--- a/src/client/layout/footer.css
+++ b/src/client/layout/footer.css
@@ -6,7 +6,7 @@
   overflow: hidden;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 420px) {
   .footer {
     margin-left: -10px;
     margin-right: -10px;
@@ -18,7 +18,7 @@
   width: 30%;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 420px) {
   .nav {
     float: none;
     width: auto;
@@ -34,7 +34,7 @@
   margin-right: 40%;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 420px) {
   .left {
     margin-right: 0;
   }
@@ -64,4 +64,12 @@
 
 :global(.SocialMediaShareButton) {
   display: inline;
+}
+
+@media (max-width: 420px) {
+  :global(.SocialMediaShareButton) {
+    display: inline-block;
+    margin-right: 20px;
+    transform: scale(1.5);
+  }
 }
